--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
+    <ul>
+      <li>Link 1</li>
+      <li>Link 2</li>
+      <li>Link 3</li>
+    </ul>
     <div class="Header" id="Title"></div>
     <div class="Main" id="Text"></div>
   </body>
